lecture-8-homework: - add MultiCreateVacancies - add YAML config - add Kafka producing - add Prometheus metrics - add Jaeger tracing
